add dynamic spotlight / banner

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
 </head>
 <body class="join">
     <header class="head-wrapper">
-        <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce">
+        <img src="images/chamberLogo.webp" alt="Logo FW Chamber of Commerce">
         <div class="header-title"><h1><span>The Greater Federal Way</span>
             <span>Chamber of Commerce</span><span>Membership Directory</span></h1></div>
         <a id="menu" href="#"></a>
