--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,8 +24,13 @@
     <link rel="icon" href="images/favicon_chamber.png" type="image/x-icon">
     <script src="scripts/chamber.js" defer></script>
     <script src="scripts/fw-wx.js" defer></script>
+    <script src="scripts/index.js" defer></script>
 </head>
 <body class="c-index">
+    <div class="banner">
+        <p>Chamber Meet & Greet Every Wednesday at 7:00PM</p>
+        <button id="close-banner" class="close-button">X</button>
+    </div>
     <header class="head-wrapper">
         <img src="images/chamberLogo.webp" alt="Logo FW Chamber of Commerce">
         <div class="header-title"><h1><span>Greater Federal Way</span>
@@ -124,16 +129,11 @@
                                     </tr>
                                     <tr>
                                         <td>51 - 100</td>
-                                        <td>$1,034.00</td>
-                                        <td>$1,069.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>101 - 200</td>
                                         <td>$1,210.00</td>
                                         <td>$1,245.00</td>
                                     </tr>
                                     <tr>
-                                        <td>201 - 300</td>
+                                        <td>101 - 300</td>
                                         <td>$1,688.50</td>
                                         <td>$1,723.50</td>
                                     </tr>
@@ -149,56 +149,7 @@
             </div>
         </div>
         <div class="row2">
-            <section class="card">
-                <div class="card-header">
-                    <h2>Member Spotlight</h2>
-                </div>
-                <div class="card-content">
-                    <div class="spot-img">
-                        <img src="images/skc-ems.webp" alt="Sount King County EMS logo" loading="lazy" width="113" height="120">
-                    </div>
-                    <div class="spot-contact">
-                        <p>🔥 Too hot? We’ve got your back</p>
-                        <p>📧 cao.web@southkingfire.org</p>
-                        <p>📞 253-839-6234</p>
-                    </div>
-                    <a href="https://southkingfire.org/?form=MG0AV3" target="_blank">website</a>
-                </div>
-            </section>
-            <section class="card">
-                <div class="card-header">
-                    <h2>Member Spotlight</h2>
-                </div>
-                <div class="card-content">
-                    <div class="spot-img">
-                        <img src="images/lhws.webp" alt="Lakehaven water & sewer logo" loading="lazy" width="241" height="77">
-                    </div>
-                    <div class="spot-contact">
-                        <p>💩 Change murky into remarkable</p>
-                        <p>📧 lakehaven@lakehaven.org</p>
-                        <p>📞 253-941-1516</p>
-                    </div>
-                    <a href="https://www.lakehaven.org/" target="_blank">website</a>
-                </div>
-            </section>
-            <section class="card">
-                <div class="card-header">
-                    <h2>Member Spotlight</h2>
-                </div>
-                <div class="card-content">
-                    <div class="spot-img">
-                        <!-- img file was fw_Logo.webp, changed it to fw_logo.webp says no changes, no push ??-->
-                        <img src="images/fw_logo.webp" alt="City of Federal Way logo" loading="lazy" width="240" height="52">
-                    </div>
-                    <div class="spot-contact">
-                        <p>✨ Centered on oportunity</p>
-                        <p>📧 info@cityoffederalway.com</p>
-                        <p>📞 253-835-7000</p>
-                    </div>
-                    <a href="https://www.federalwaywa.gov/" target="_blank">website</a>
-                </div>
-            </section>
-            </div>
+            
         </div>
     </main>
     <footer>
