--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header class="head-wrapper">
-        <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce">
+        <img src="images/chamberLogo.webp" alt="Logo FW Chamber of Commerce">
         <div class="header-title"><h1><span>Greater Federal Way</span>
             <span>Chamber of Commerce</span></h1></div>
         <a id="menu" href="#"></a>
@@ -209,7 +209,7 @@
     <footer>
         <div class="footer-content">
             <div class="f_logo">
-            <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce"></div>
+            <img src="images/chamberLogo.webp" alt="Logo FW Chamber of Commerce"></div>
             <div class="f_name">
             <p>Greater Federal Way Chamber of Commerce</p></div>
             <div class="f_address">
