--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,7 +27,7 @@
 </head>
 <body class="join">
     <header class="head-wrapper">
-        <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce">
+        <img src="images/chamberLogo.webp" alt="Logo FW Chamber of Commerce">
         <div class="header-title"><h1><span>Join The Greater Federal Way</span>
             <span>Chamber of Commerce</span></h1></div>
         <a id="menu" href="#"></a>
