--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,8 +8,8 @@
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
     <link rel="preload" href="images/flag-of-usa.png" as="image">
-    <link rel="preload" href="images/fw_logo.webp" as="image">
-    <link rel="preload" href="images/lhws.webp" as="image">
+    <link rel="preload" href="images/fw_logo1.webp" as="image">
+    <link rel="preload" href="images/lhws1.webp" as="image">
 
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
