--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="https://e-arndt.github.io/wdd230/chamber/index.html">Chamber</a></li>
-            <li><a href="#">Site Plan</a></li>
+            <li><a href="./week01/chamber-site-plan.html">Site Plan</a></li>
             <li class="active"><a href="form.html">Form</a></li>
         </ul>
     </nav>
