consistant naming of Member Directory

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,7 +41,7 @@
         <ul>
             <li class="active"><a href="../index.html">Course Home</a></li>
             <li><a href="./join.html">Join the Chamber</a></li>
-            <li><a href="./directory.html">Business Directory</a></li>
+            <li><a href="./directory.html">Member Directory</a></li>
             <li><a href="./discover.html">Discover</a></li>
         </ul>
     </nav>
